# business-boom-service

./: .envexample  CHANGELOG.md  README.md  pyproject.toml
src/: service.py
src/app/: service.py
src/app/api/: routes.py
src/app/api/reminders/: handler.py  schemas.py
src/app/config/: config.py
src/app/services/: reminders.py
src/app/storages/models/: reminders.py
src/migrations/: env.py
src/migrations/versions/: 1_added_table.py
