[tool.poetry]
name = "business-boom-service"
version = "1.0.0"
description = ""
authors = ["shedko"]
readme = "README.md"
packages = [{include = "business_boom_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
databases = "^0.9.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
aiohttp = "^3.11.11"
twilio = "^9.4.4"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.11.0"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"